Issue 1739: POST template-tar route (#1743)
* POST template-tar route

* rm extra doc

* changelog

* log error

* rm space in header

* rm commas

* commas warning
